--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: date
-  windows: windows-latest
-    runs-on:
+  windows:
+    runs-on: windows-latest
     steps:
     - run: date
-  macos: macos-latest
-    runs-on:
+  macos:
+    runs-on: macos-latest
     steps:
     - run: date
   depends:
